# trotvm

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
cilver/: basedefs.h  lexer.cc  lexer.h
cmake/: Findre2c.cmake  trotirConfig.cmake.in  trotvmConfig.cmake.in
kast/: CMakeLists.txt  config.h.in
kast/ast/: CMakeLists.txt  astnode.cc  astnode.h  basedefs.h  expr.h  lexer.cc  lexer.cc.in  lexer.h  metaexpr.h  metastmt.h  stmt.h
trotir/: CMakeLists.txt  basedefs.h  config.h.in  fn.h  irm.cc  irm.h  object.cc  object.h  opcode.h  type.h  value.h  vm.cc  vm.h
trotvm/: CMakeLists.txt  basedefs.h  config.h.in  fn.h  object.cc  object.h  opcode.h  type.h  value.h  vm.cc  vm.h
xyc/: CMakeLists.txt  main.cc
xylo/: CMakeLists.txt  ast.h  config.h.in
xylo/ast/: CMakeLists.txt  astnode.cc  astnode.h  attrib.h  attribute.cc  attribute.h  basedefs.h  expr.cc  expr.h  fn.cc  fn.h  idref.cc  idref.h  lexer.cc  lexer.cc.in  lexer.h  lexer.in.cpp  metaexpr.h  metastmt.h  mod.cc  mod.h  namespace.cc  namespace.h  parser.cc  parser.h  stmt.cc  stmt.h  struct.cc  struct.h  typename.cc  typename.h  typename_base.cc  typename_base.h  using.cc  using.h  var.cc  var.h
xylo/ast/parser/: CMakeLists.txt  expr.cc  misc.cc  stmt.cc  typename.cc
xylo/docs/: c_ffi_compatibility.md  freestanding.md  importing.md  move_objects.md  pure_functions.md
xylo/lib/capi/: malloc.xyi  string.xyi
xylo/lib/core/: ast_macros.xy  attributes.xy  dbg.xy  macros.xy  misc_macros.xy  type_macros.xy  utils.xy
xylo/lib/minstd/: allocator.xy  option.xy  rcobj.xy
xylo/lib/plat/: features.xy  malloc.xyi
xylo/lib/plat/none/: features.xy
xylo/lib/plat/posix/: features.xy
xylo/lib/reflect/: metadata.xy
xylo/lib/std/: allocator.xy  default_allocator.xy  option.xy  rcobj.xy  stream.xy
